# zk-example-pedersen

./: Cargo.toml  README.md
blake2s/: Cargo.toml
pedersen/: Cargo.toml
pedersen/src/: main.rs  r1cs.rs
prf/: Cargo.toml
prf/src/: blake.rs  main.rs
src/: groth_api.rs  main.rs  pedersen.rs  r1cs.rs
